--- a/www.dz-rs.si/e093e790b099a3d8b4cb54cf00553e8cb70579ce.yml
+++ b/www.dz-rs.si/e093e790b099a3d8b4cb54cf00553e8cb70579ce.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:43:08 GMT
+    - Mon, 02 Apr 2018 08:43:44 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000YKMo4bdgHpFJcdPCH08jrIc:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000T6L97DblgOP2C7PrV9gV8vo:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440699;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->16;EvalII->16;CHd;FP2->16;WS=af561ea8;default;FP4->66;C003;
+    - F7360B2047A90E4D;87d9ab10;742590;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=fd938310;default;FP4->49;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440699)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-742590)
     Content-Length:
     - '13407'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:43:06 GMT
+recorded_at: Mon, 02 Apr 2018 08:43:42 GMT
