--- a/www.dz-rs.si/b4b50c817588c4c43810a31d3c3079d5e733afdb.yml
+++ b/www.dz-rs.si/b4b50c817588c4c43810a31d3c3079d5e733afdb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:43:19 GMT
+    - Mon, 02 Apr 2018 08:43:52 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000sJ97M82uuDxjjTiLRAy1HBn:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000E4fVZqpQPysj8UnjLR7jaa6:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440723;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=af561ea8;default;FP4->61;C003;
+    - F7360B2047A90E4D;87d9ab10;742621;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->92;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440723)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-742621)
     Content-Length:
     - '12820'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:43:19 GMT
+recorded_at: Mon, 02 Apr 2018 08:43:51 GMT
