--- a/www.dz-rs.si/c3066db391e0df85b6ca1d52476d259a0a7b83e8.yml
+++ b/www.dz-rs.si/c3066db391e0df85b6ca1d52476d259a0a7b83e8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:43:33 GMT
+    - Mon, 02 Apr 2018 08:44:06 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000GIyywaFMSIORVaclbhS_CvV:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000Y1EQAAC5b2EnLVAN2ZYcxTW:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440749;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->10;EvalII->10;CHd;FP2->10;WS=af561ea8;default;FP4->58;C003;
+    - F7360B2047A90E4D;87d9ab10;742664;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->56;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440749)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-742664)
     Content-Length:
     - '12836'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:43:32 GMT
+recorded_at: Mon, 02 Apr 2018 08:44:04 GMT
