--- a/www.dz-rs.si/de870db1d994ad379c1927777e2f1fdf5dd0cbc2.yml
+++ b/www.dz-rs.si/de870db1d994ad379c1927777e2f1fdf5dd0cbc2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:43:46 GMT
+    - Mon, 02 Apr 2018 08:44:19 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000uInIMSpN5mE6b5xLhZh34Ml:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000W7buZS1iLtFcP4V1WPE0L-r:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440774;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->6;EvalII->6;CHd;FP2->6;WS=af561ea8;default;FP4->79;C003;
+    - F7360B2047A90E4D;87d9ab10;742725;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=fd938310;default;FP4->60;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440774)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-742725)
     Content-Length:
     - '12987'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:43:45 GMT
+recorded_at: Mon, 02 Apr 2018 08:44:16 GMT
