--- a/www.dz-rs.si/2e87b578e8da6c7b35acff52b1925aa51577b5e7.yml
+++ b/www.dz-rs.si/2e87b578e8da6c7b35acff52b1925aa51577b5e7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:43:54 GMT
+    - Mon, 02 Apr 2018 08:44:31 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000pWXgp5Yq1-qiz-s1vuYw_z4:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000ZQPB_kjk4rnI7SNk8Tz0frE:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440789;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->11;EvalII->11;CHd;FP2->11;WS=af561ea8;default;FP4->66;C003;
+    - F7360B2047A90E4D;87d9ab10;742918;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=fd938310;default;FP4->53;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440789)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-742918)
     Content-Length:
-    - '13144'
+    - '13148'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:43:53 GMT
+recorded_at: Mon, 02 Apr 2018 08:44:30 GMT
