--- a/www.dz-rs.si/3069c43f596858a6670addc1e9cd7b45618b1aa8.yml
+++ b/www.dz-rs.si/3069c43f596858a6670addc1e9cd7b45618b1aa8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:44:08 GMT
+    - Mon, 02 Apr 2018 08:44:49 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000orb30Am678AUL0iTv97hbw6:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000tfObXvX5wU4283jAF5JH2Gp:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440818;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=af561ea8;default;FP4->103;C003;
+    - F7360B2047A90E4D;87d9ab10;743007;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->58;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440818)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-743007)
     Content-Length:
-    - '12554'
+    - '12557'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:44:07 GMT
+recorded_at: Mon, 02 Apr 2018 08:44:47 GMT
