--- a/www.dz-rs.si/9f8ac0b48f77792ee4e8cc66bd3b61980d21f208.yml
+++ b/www.dz-rs.si/9f8ac0b48f77792ee4e8cc66bd3b61980d21f208.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:44:21 GMT
+    - Mon, 02 Apr 2018 08:45:03 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000YLoYQ8GpTiaM8JhN2W9mjd5:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000BMtRHrjX4VyKlx9bB-4LN8z:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440844;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=af561ea8;default;FP4->52;C003;
+    - F7360B2047A90E4D;87d9ab10;743057;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->60;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440844)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-743057)
     Content-Length:
-    - '13225'
+    - '13226'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:44:20 GMT
+recorded_at: Mon, 02 Apr 2018 08:45:02 GMT
