--- a/www.dz-rs.si/320206b18c9eac35bcaa17b905f2f4c5420b159e.yml
+++ b/www.dz-rs.si/320206b18c9eac35bcaa17b905f2f4c5420b159e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:44:47 GMT
+    - Mon, 02 Apr 2018 08:45:28 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=00004pzRURBBM7KJGH1GpgBfukA:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000iOnAObLZtllMamnsORvr9Ai:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440882;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->6;EvalII->6;CHd;FP2->6;WS=af561ea8;default;FP4->61;C003;
+    - F7360B2047A90E4D;87d9ab10;743141;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->60;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440882)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-743141)
     Content-Length:
-    - '12999'
+    - '13001'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:44:45 GMT
+recorded_at: Mon, 02 Apr 2018 08:45:26 GMT
