--- a/www.dz-rs.si/fde0f39be778a7f30b37cb34db67406d4901c913.yml
+++ b/www.dz-rs.si/fde0f39be778a7f30b37cb34db67406d4901c913.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:45:46 GMT
+    - Mon, 02 Apr 2018 08:46:25 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000cnCO4IwZCDrruY1McI5LvJ6:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000kaHdASDoxxlA-DPYBoQKJJ1:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440975;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=af561ea8;default;FP4->65;C003;
+    - F7360B2047A90E4D;87d9ab10;743417;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->51;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440975)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-743417)
     Content-Length:
-    - '13466'
+    - '13507'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:45:45 GMT
+recorded_at: Mon, 02 Apr 2018 08:46:24 GMT
