--- a/www.dz-rs.si/33405d20030c555d846eb543591c9ac7fb7aa722.yml
+++ b/www.dz-rs.si/33405d20030c555d846eb543591c9ac7fb7aa722.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:45:59 GMT
+    - Mon, 02 Apr 2018 08:46:38 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000LhS0nMZ-gZRL219XwmNCWqu:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000IapIEKDhQGbIBJzyJdlGdF0:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440991;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->7;EvalII->7;CHd;FP2->7;WS=af561ea8;default;FP4->56;C003;
+    - F7360B2047A90E4D;87d9ab10;743470;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=fd938310;default;FP4->64;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440991)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-743470)
     Content-Length:
     - '13171'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:45:58 GMT
+recorded_at: Mon, 02 Apr 2018 08:46:36 GMT
