--- a/www.dz-rs.si/8021ebc9f5583d6e9c51dff9d46af7b64372a3d3.yml
+++ b/www.dz-rs.si/8021ebc9f5583d6e9c51dff9d46af7b64372a3d3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:46:12 GMT
+    - Mon, 02 Apr 2018 08:46:51 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000yeONuBet1zOIFN0s2aFAvDE:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000tqU8DoBfu-mEypeKkldAiAK:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25441015;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=af561ea8;default;FP4->74;C003;
+    - F7360B2047A90E4D;87d9ab10;743566;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->63;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25441015)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-743566)
     Content-Length:
     - '12681'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:46:11 GMT
+recorded_at: Mon, 02 Apr 2018 08:46:49 GMT
