--- a/www.dz-rs.si/e6250215c39fc59007f7e1e41f8b8d9b1066f7ce.yml
+++ b/www.dz-rs.si/e6250215c39fc59007f7e1e41f8b8d9b1066f7ce.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:46:25 GMT
+    - Mon, 02 Apr 2018 08:47:05 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000E2j1z9FbLQ2W-adX1nMYu-A:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=00009JX55RjRT9BylWYnoRHLfiA:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25441043;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->6;EvalII->6;CHd;FP2->6;WS=af561ea8;default;FP4->58;C003;
+    - F7360B2047A90E4D;87d9ab10;743680;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->7;EvalII->7;CHd;FP2->7;WS=fd938310;default;FP4->65;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25441043)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-743680)
     Content-Length:
     - '13368'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:46:24 GMT
+recorded_at: Mon, 02 Apr 2018 08:47:02 GMT
