--- a/www.dz-rs.si/d34a01360bfc36f05587ac3526af2fa2f288ba87.yml
+++ b/www.dz-rs.si/d34a01360bfc36f05587ac3526af2fa2f288ba87.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:46:40 GMT
+    - Mon, 02 Apr 2018 08:47:16 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000UV6xnLgIhi0B3PIFz1qqm_J:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000mfgUQT1oSmvEWpQFcJP1U5K:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25441076;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=af561ea8;default;FP4->352;C003;
+    - F7360B2047A90E4D;87d9ab10;743715;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->12;EvalII->12;CHd;FP2->12;WS=fd938310;default;FP4->73;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25441076)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-743715)
     Content-Length:
-    - '13376'
+    - '13378'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:46:37 GMT
+recorded_at: Mon, 02 Apr 2018 08:47:13 GMT
