--- a/www.dz-rs.si/72dfcd19ea3baf99f4c3eb235dfa4df413a91911.yml
+++ b/www.dz-rs.si/72dfcd19ea3baf99f4c3eb235dfa4df413a91911.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:46:52 GMT
+    - Mon, 02 Apr 2018 08:47:24 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000AhOKJB-M9lyfQXP3Eeg2R7N:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000CMUJWTOa4H2yDp4Nvncp9GC:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25441098;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=af561ea8;default;FP4->270;C003;
+    - F7360B2047A90E4D;87d9ab10;743767;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->60;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25441098)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-743767)
     Content-Length:
     - '13406'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:46:49 GMT
+recorded_at: Mon, 02 Apr 2018 08:47:22 GMT
