--- a/www.dz-rs.si/8e1139a304eeafd89dd9c2caf0063234cd74fa4b.yml
+++ b/www.dz-rs.si/8e1139a304eeafd89dd9c2caf0063234cd74fa4b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:47:01 GMT
+    - Mon, 02 Apr 2018 08:47:36 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000TQNb-73zSq2O3BIUyGCAQWA:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=00005-Vxux41G7tJ4G_xMX924Nb:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25441115;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->11;EvalII->11;CHd;FP2->11;WS=af561ea8;default;FP4->66;C003;
+    - F7360B2047A90E4D;87d9ab10;743812;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->66;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25441115)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-743812)
     Content-Length:
     - '13051'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:46:59 GMT
+recorded_at: Mon, 02 Apr 2018 08:47:34 GMT
