--- a/www.dz-rs.si/abee091aae2d500990d6a27e9a5e79cef316efe7.yml
+++ b/www.dz-rs.si/abee091aae2d500990d6a27e9a5e79cef316efe7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:47:15 GMT
+    - Mon, 02 Apr 2018 08:47:44 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000CJBi0sGXoOfYUQ9Ya9iGDSS:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000RAIzGqTZMNWj9W28mVXihpe:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25441149;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=af561ea8;default;FP4->62;C003;
+    - F7360B2047A90E4D;87d9ab10;743832;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->57;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25441149)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-743832)
     Content-Length:
-    - '12686'
+    - '12684'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:47:12 GMT
+recorded_at: Mon, 02 Apr 2018 08:47:42 GMT
