--- a/www.dz-rs.si/cf1c11b299cf24e92b5aaaee464e87f445b9a81c.yml
+++ b/www.dz-rs.si/cf1c11b299cf24e92b5aaaee464e87f445b9a81c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:48:31 GMT
+    - Mon, 02 Apr 2018 08:49:00 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000DJN7xMFyct4dg6sZu5y9Anj:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000F8hS8GgaWDjz4sy9pxNDMUQ:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25441285;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->7;EvalII->7;CHd;FP2->7;WS=af561ea8;default;FP4->56;C003;
+    - F7360B2047A90E4D;87d9ab10;744209;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->54;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25441285)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-744209)
     Content-Length:
     - '13184'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:48:29 GMT
+recorded_at: Mon, 02 Apr 2018 08:48:58 GMT
