--- a/www.dz-rs.si/2b75c7a717b2ed7850ba8ac719b11d54ccc1300b.yml
+++ b/www.dz-rs.si/2b75c7a717b2ed7850ba8ac719b11d54ccc1300b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:48:43 GMT
+    - Mon, 02 Apr 2018 08:49:09 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000t8lT9fQlHcfiaJiuYcjyRsN:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=00005YwmkVrp0gJO06OYf9n2p-2:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25441308;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=af561ea8;default;FP4->56;C003;
+    - F7360B2047A90E4D;87d9ab10;744243;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->59;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25441308)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-744243)
     Content-Length:
-    - '12384'
+    - '12386'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:48:42 GMT
+recorded_at: Mon, 02 Apr 2018 08:49:06 GMT
