--- a/www.dz-rs.si/bce0ba28f54f1e90ef6b7fc67189a5d32c8586eb.yml
+++ b/www.dz-rs.si/bce0ba28f54f1e90ef6b7fc67189a5d32c8586eb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:48:57 GMT
+    - Mon, 02 Apr 2018 08:49:19 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=000006IZH7H6GkEZSUYbdLk8PZ-:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000iFqPCzMvXF-vNv-0BGrr0I_:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25441330;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=af561ea8;default;FP4->55;C003;
+    - F7360B2047A90E4D;87d9ab10;744278;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=fd938310;default;FP4->55;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25441330)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-744278)
     Content-Length:
     - '14497'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:48:55 GMT
+recorded_at: Mon, 02 Apr 2018 08:49:17 GMT
