--- a/www.dz-rs.si/53e01f9c83ce43d544f29a535c5620daf107cce0.yml
+++ b/www.dz-rs.si/53e01f9c83ce43d544f29a535c5620daf107cce0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:49:47 GMT
+    - Mon, 02 Apr 2018 08:50:04 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000l1JGG2DAaiHTQWvIIJQfZYw:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000EQWEcQX9HpwozgGvbWCPI27:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25441419;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=af561ea8;default;FP4->76;C003;
+    - F7360B2047A90E4D;87d9ab10;744496;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->58;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25441419)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-744496)
     Content-Length:
-    - '12689'
+    - '12690'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:49:45 GMT
+recorded_at: Mon, 02 Apr 2018 08:50:03 GMT
