--- a/www.dz-rs.si/df6a5eb2245f75827f3ad873015b4215c66c0e40.yml
+++ b/www.dz-rs.si/df6a5eb2245f75827f3ad873015b4215c66c0e40.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:51:25 GMT
+    - Mon, 02 Apr 2018 08:51:40 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000AAxauJFZ1kg_hpZ-MrPCMwu:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000gYPDrQgJenQP5C-ZTTxpq6q:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25441601;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=af561ea8;default;FP4->308;C003;
+    - F7360B2047A90E4D;87d9ab10;744836;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->18;EvalII->18;CHd;FP2->18;WS=fd938310;default;FP4->67;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25441601)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-744836)
     Content-Length:
-    - '13406'
+    - '13402'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:51:23 GMT
+recorded_at: Mon, 02 Apr 2018 08:51:39 GMT
