--- a/www.dz-rs.si/0b5eaedd05b4f495145c7da3dc245a3dbf607280.yml
+++ b/www.dz-rs.si/0b5eaedd05b4f495145c7da3dc245a3dbf607280.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:51:47 GMT
+    - Mon, 02 Apr 2018 08:52:03 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000eyDiIXzqBrQlND6Shza1m4d:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=00006Lth3F4P5tdySm1lYav4Msf:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25441657;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->11;EvalII->11;CHd;FP2->11;WS=af561ea8;default;FP4->59;C003;
+    - F7360B2047A90E4D;87d9ab10;744944;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->60;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25441657)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-744944)
     Content-Length:
-    - '14000'
+    - '14003'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:51:45 GMT
+recorded_at: Mon, 02 Apr 2018 08:52:00 GMT
